--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cn.weforward</groupId>
 	<artifactId>weforward-protocol</artifactId>
-	<version>1.2.0</version>
+	<version>1.2.1</version>
 
 	<name>weforward-protocol</name>
 	<url>http://weforward.cn</url>
@@ -45,9 +48,9 @@
 			<version>1.7.2</version>
 		</dependency>
 		<dependency>
-			<groupId>cn.weforward</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>weforward-common</artifactId>
-			<version>1.2.0</version>
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -131,7 +134,7 @@
 						<artifactId>build-maven-plugin</artifactId>
 						<version>1.1.0</version>
 						<configuration>
-							<mainVersion>1.1</mainVersion>
+							<mainVersion>1.2</mainVersion>
 							<outputDirectory>bin</outputDirectory>
 						</configuration>
 					</plugin>
